--- a/src/app/componentes/inscripcion/inscripcion.component.html
+++ b/src/app/componentes/inscripcion/inscripcion.component.html
@@ -73,7 +73,7 @@
             <!-- Genero -->
             <label>Género (*)</label><br>
             <div class="custom-control custom-radio custom-control-inline">
-              <input type="radio" class="custom-control-input" id="mujer" value="F" formControlName="genero" checked>
+              <input type="radio" class="custom-control-input" id="mujer" value="F" formControlName="genero">
               <label class="custom-control-label" for="mujer">Mujer</label>
             </div>
 
