--- a/src/app/componentes/carreras/carreras.component.html
+++ b/src/app/componentes/carreras/carreras.component.html
@@ -6,7 +6,7 @@
     <p class="text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit
         esse cillum dolore eu fugiat nulla sint occaecat cupidatat non proident, sunt culpa
         qui officia deserunt est laborum.</p>
-    <div class="row mx-auto d-block">
+    <div class="mx-auto">
 
       <!-- Si cargaron los datos -->
       <ng-container *ngIf="cargarDatos; else newDeb">
